--- a/shelf/docs/TODO.txt
+++ b/shelf/docs/TODO.txt
@@ -59,6 +59,9 @@ DONE - need new utils: list databases, list collections in db.
 
 
 TODO: web interface to select instructions for broker run
+FIXME - nDocuments does not appear in the interface; therefore, if it has 
+    multiple values, it will generate redundant instructions.  YIKES!
+    Workaround: permit only one value, i.e., 10,000 docs.  
 DONE - BUG! Simulation length is not propagated downstream from form 
     to bottle to broker to main.  
 FIXME - timestamp the form when it is generated so we can tell when 
