--- a/shelf/docs/TODO.txt
+++ b/shelf/docs/TODO.txt
@@ -1,6 +1,44 @@
 TODO list for PreservationSimulation SHELF project
 
 
+TODO: fix docs for release
+FIXME - shelf/docs/StructureOfSimulationCode-00.doc
+FIXME - shelf/docs/HowTo_RunSimulationsWithBroker-01.doc
+FIXME - shelf/docs/HowTo_Install-02.doc
+FIXME - shelf/docs/HowTo_ModelWithParameters.doc
+FIXME - shelf/docs/HowTo_RunOnAWS.txt
+FIXME - shelf/docs/HowTo_RunYourFirstSimulation.doc
+FIXME - shelf/docs/ShockArrivals.xls
+DONE - shelf/docs/SimulationMethod-07.doc
+
+
+TODO: fix code comments for release
+FIXME - shelf/audit2.py
+FIXME - shelf/broker2.py        # integrated with newbroker3.  
+FIXME - shelf/brokercli.py      # add --overbook option.  
+FIXME - shelf/---missing---     # write short user manual on db*.py utils.  
+DONE - shelf/extractvalues2.py
+DONE - shelf/filelock.py       # maybe remove?  never integrated.  
+FIXME - shelf/lifetime.py       # check calculation hints.  
+FIXME - shelf/listactor.py      # remove?  no longer used.  
+FIXME - shelf/main.py           # fersherr!  
+FIXME - shelf/newbroker3.py
+FIXME - shelf/repair.py         # remove?  empty.  
+FIXME - shelf/resettabletimer.py    # remove!  doesn't work with simpy.  
+FIXME - shelf/searchlib.py      # remove?  obsolete, mongo-based.  
+DONE - shelf/searchdatabase.py # remove?  obsolete, mongo-based.  
+FIXME - shelf/searchspace.py    # pep8ify.  
+FIXME - shelf/shock.py
+FIXME - shelf/testtimer1.py     # remove?  timer doesn't work.  
+FIXME - shelf/util.py
+FIXME - shelf/AWS_shelf_installscript.sh
+FIXME - shelf/howlong.sh        # whatsit?  
+FIXME - shelf/broker2commandlist.txt
+FIXME - shelf/fix ubuntu 18.04 awsinstall problem.txt
+FIXME - shelf/hl-extractinstructions.txt
+FIXME - shelf/pretestchecklist.sh   # fix needfile list.  
+
+
 TODO: shock
 DONE - reduce collections for shock cases to just a few documents;
     we care only if all docs are lost or none are lost; binary decision; 
@@ -42,15 +80,16 @@ DONOTDO - if shockfreq==0, should we coerce serverdefaultlifetime=0?
 
 
 TODO: status bookkeeping database
-FIXME - BUG find out why skipping done jobs stopped working suddenly, and 
-    fix it.  
+ABANDON - (not reproducible) BUG find out why skipping done jobs stopped 
+    working suddenly, and fix it.  
 DONOTDO - move to SQLite instead of the current MongoDB.
 FIXME - BUG datacleanup sometimes inserts a second header line as line 3;
     the first two jobs have a race condition; have to add locking
     of the GiantOutput file, oops.
     I think this is a race condition with two instances of datacleanup reading
     the GiantOutput empty file at the hsame time before the first one is
-    able to write into the file.  
+    able to write into the file.  Fundamental to the file system?  
+    I don't think I can fix it.  
 DONE - add server default half-life, and any other vagrant parameters 
     you find lying about, to the hash for done-detection.  
 DONE - write searchdb status database based on json files.
