Continue updating documents for users.

--- a/shelf/docs/TODO.txt
+++ b/shelf/docs/TODO.txt
@@ -2,13 +2,13 @@ TODO list for PreservationSimulation SHELF project
 
 
 TODO: fix docs for release
-FIXME - shelf/docs/StructureOfSimulationCode-00.doc
-FIXME - shelf/docs/HowTo_RunSimulationsWithBroker-01.doc
-FIXME - shelf/docs/HowTo_Install-02.doc
-FIXME - shelf/docs/HowTo_ModelWithParameters.doc
-FIXME - shelf/docs/HowTo_RunOnAWS.txt
-FIXME - shelf/docs/HowTo_RunYourFirstSimulation.doc
-FIXME - shelf/docs/ShockArrivals.xls
+DONE - shelf/docs/StructureOfSimulationCode-00.doc
+REMOVED - shelf/docs/HowTo_RunSimulationsWithBroker-01.doc
+DONE - shelf/docs/HowTo_Install-02.doc
+DONE - shelf/docs/HowTo_ModelWithParameters.doc
+DONE - shelf/docs/HowTo_RunOnAWS.txt
+REMOVED - shelf/docs/HowTo_RunYourFirstSimulation.doc
+OKAY - shelf/docs/ShockArrivals.xls
 DONE - shelf/docs/SimulationMethod-07.doc
 
 
@@ -18,7 +18,7 @@ FIXME - shelf/broker2.py        # integrated with newbroker3.
 FIXME - shelf/brokercli.py      # add --overbook option.  
 FIXME - shelf/---missing---     # write short user manual on db*.py utils.  
 DONE - shelf/extractvalues2.py
-DONE - shelf/filelock.py       # maybe remove?  never integrated.  
+REMOVED - shelf/filelock.py       # maybe remove?  never integrated.  
 FIXME - shelf/lifetime.py       # check calculation hints.  
 FIXME - shelf/listactor.py      # remove?  no longer used.  
 FIXME - shelf/main.py           # fersherr!  
@@ -26,7 +26,7 @@ FIXME - shelf/newbroker3.py
 FIXME - shelf/repair.py         # remove?  empty.  
 FIXME - shelf/resettabletimer.py    # remove!  doesn't work with simpy.  
 FIXME - shelf/searchlib.py      # remove?  obsolete, mongo-based.  
-DONE - shelf/searchdatabase.py # remove?  obsolete, mongo-based.  
+REMOVED - shelf/searchdatabase.py # remove?  obsolete, mongo-based.  
 FIXME - shelf/searchspace.py    # pep8ify.  
 FIXME - shelf/shock.py
 FIXME - shelf/testtimer1.py     # remove?  timer doesn't work.  
