--- a/shelf/docs/TODO.txt
+++ b/shelf/docs/TODO.txt
@@ -24,14 +24,15 @@ FIXME - shelf/listactor.py      # remove?  no longer used.
 FIXME - shelf/main.py           # fersherr!  
 FIXME - shelf/newbroker3.py
 FIXME - shelf/repair.py         # remove?  empty.  
-FIXME - shelf/resettabletimer.py    # remove!  doesn't work with simpy.  
+DONE - shelf/resettabletimer.py    # remove!  doesn't work with simpy.  
 FIXME - shelf/searchlib.py      # remove?  obsolete, mongo-based.  
 REMOVED - shelf/searchdatabase.py # remove?  obsolete, mongo-based.  
 FIXME - shelf/searchspace.py    # pep8ify.  
+DONE - shelf/server.py         # remove refs to resettabletimer.
 FIXME - shelf/shock.py
-FIXME - shelf/testtimer1.py     # remove?  timer doesn't work.  
+DONE - shelf/testtimer1.py     # remove?  timer doesn't work.  
 FIXME - shelf/util.py
-FIXME - shelf/AWS_shelf_installscript.sh
+FIXME - shelf/AWS_shelf_installscript.sh    # update to Ubuntu 18.04 LTS Server?
 FIXME - shelf/howlong.sh        # whatsit?  
 FIXME - shelf/broker2commandlist.txt
 FIXME - shelf/fix ubuntu 18.04 awsinstall problem.txt
